feat: Deploy to Google Kubernetes Engine (GKE)
- Update images to use GCR (gcr.io/fastfood-cicd-2025/*)
- Fix MongoDB connection with StatefulSet DNS
- Increase MongoDB probe timeouts for GKE Autopilot
- Add MONGO_URI to configmap for service compatibility
- Successfully deployed: auth, order, restaurant services
- External IP: 34.87.39.232:5001

--- a/k8s/auth-service.yaml
+++ b/k8s/auth-service.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: auth-service
-          image: fastfood/auth-service:latest
+          image: gcr.io/fastfood-cicd-2025/auth-service:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 5001
