--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -6,11 +6,13 @@ metadata:
   namespace: fastfood
 data:
   NODE_ENV: "production"
-  MONGODB_URI: "mongodb://mongodb:27017/fastfood"
+  MONGO_URI: "mongodb://mongodb-0.mongodb.fastfood.svc.cluster.local:27017/fastfood"
+  MONGODB_URI: "mongodb://mongodb-0.mongodb.fastfood.svc.cluster.local:27017/fastfood"
   REDIS_HOST: "redis"
   REDIS_PORT: "6379"
   KAFKA_BROKERS: "kafka:9092"
   JWT_EXPIRES_IN: "7d"
+  JWT_SECRET: "fastfood-jwt-secret-key-2025"
   
 ---
 # ConfigMap for service URLs
