--- a/k8s/notification-service.yaml
+++ b/k8s/notification-service.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: notification-service
-          image: fastfood/notification-service:latest
+          image: gcr.io/fastfood-cicd-2025/notification-service:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 5006
