feat(monitoring): Add complete Test Monitoring Dashboard
- Test Metrics Exporter: Express.js app exporting Prometheus metrics
  - /metrics endpoint for Prometheus scraping
  - /api/test-results, /api/failed-tests for API access
  - /api/report POST endpoint for CI/CD integration

- Grafana Dashboard (12 panels):
  - Overall pass rate and coverage stats
  - Pass/Fail history charts
  - Per-service test breakdown
  - Coverage breakdown table

- Prometheus Alert Rules (8 rules):
  - TestFailure (critical) - immediate notification
  - LowTestPassRate (<90%), CriticalTestPassRate (<70%)
  - LowCodeCoverage (<60%)
  - ServiceTestFailure per service
  - NoTestsRunning, SlowTests

- CI/CD Integration:
  - GitHub Actions test-monitoring.yml workflow
  - Parallel testing for 5 services
  - Aggregated results and metrics publishing

- Jest Integration:
  - Custom metrics-reporter.js for result export
  - Centralized jest.config.js
  - Global test setup utilities

Professor requirement: MONITOR LA PHAN QUAN TRONG - Test monitoring complete

--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -18,6 +18,7 @@ alerting:
 # Load rules once and periodically evaluate them
 rule_files:
   - /etc/prometheus/alert.rules.yml
+  - /etc/prometheus/rules/test-alerts.yml
 
 # Scrape configurations
 scrape_configs:
@@ -112,3 +113,11 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: blackbox-exporter:9115
+
+  # Test Metrics Exporter - Test results monitoring
+  - job_name: 'test-metrics'
+    static_configs:
+      - targets: ['test-metrics-exporter:9091']
+    metrics_path: /metrics
+    scheme: http
+    scrape_interval: 30s
