--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -171,27 +171,35 @@ jobs:
           echo "🌐 Services:"
           kubectl get svc -n $NAMESPACE
 
-      - name: Send notification
-        if: always()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          text: |
-            Kubernetes Deployment to ${{ inputs.environment || 'development' }}
-            Status: ${{ job.status }}
-            Commit: ${{ github.sha }}
-          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
+      - name: Send Slack notification (optional)
+        if: always() && env.SLACK_WEBHOOK_URL != ''
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+            --data "{\"text\":\"🚀 K8s Deployment to ${{ inputs.environment || 'development' }} - Status: ${{ job.status }} - Commit: ${{ github.sha }}\"}" \
+            $SLACK_WEBHOOK_URL || echo "Slack notification skipped"
         continue-on-error: true
 
   security-scan:
     name: Container Security Scan
     needs: build-and-push
     runs-on: ubuntu-latest
+    # Only run if build was successful
+    if: ${{ needs.build-and-push.result == 'success' }}
     strategy:
+      fail-fast: false
       matrix:
         service: [auth-service, order-service, restaurant-service, payment-service, notification-service]
     
     steps:
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -199,9 +207,10 @@ jobs:
           format: 'sarif'
           output: 'trivy-results-${{ matrix.service }}.sarif'
           severity: 'CRITICAL,HIGH'
+        continue-on-error: true
 
       - name: Upload Trivy scan results
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results-${{ matrix.service }}.sarif'
         continue-on-error: true
