fix: disable testExecutionReportPaths for SonarCloud compatibility
Jest JUnit format is not compatible with SonarCloud Generic Test Data format.
Coverage is still reported via lcov.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -51,10 +51,11 @@ sonar.javascript.lcov.reportPaths=\
   admin-service/coverage/lcov.info
 
 # ========================================
-# Test Execution Reports (JUnit XML)
+# Test Execution Reports
 # ========================================
-sonar.testExecutionReportPaths=\
-  tests/reports/junit.xml
+# Note: Jest JUnit format is not compatible with SonarCloud Generic Test Data
+# Coverage is reported via lcov instead
+# sonar.testExecutionReportPaths=tests/reports/junit.xml
 
 # ========================================
 # Quality Gate
