--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -499,87 +499,16 @@ jobs:
           category: "/language:javascript"
 
   # ========================================
-  # JOB 6c: SonarCloud Analysis
+  # JOB 6c: SonarCloud Analysis (DISABLED - runs in separate workflow)
   # ========================================
-  # SonarCloud provides free code analysis for public repositories
+  # SonarCloud has timeout issues with large repos
+  # Use the dedicated sonarcloud.yml workflow instead
   # Dashboard: https://sonarcloud.io/project/overview?id=HienHoang1101_cnpm_cicd
   #
-  sonarcloud:
-    name: 🔍 SonarCloud Code Analysis
-    runs-on: ubuntu-latest
-    needs: [lint, unit-tests]
-    timeout-minutes: 10
-    steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1  # Shallow clone for faster checkout
-
-      - name: 📥 Download Test Coverage
-        uses: actions/download-artifact@v4
-        with:
-          name: test-results
-          path: tests/
-        continue-on-error: true
-
-      - name: 🔍 SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        timeout-minutes: 8
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=HienHoang1101_cnpm_cicd
-            -Dsonar.organization=hienhoang1101
-            -Dsonar.sources=auth,order,restaurant,payment-service,notification-service,admin-service
-            -Dsonar.exclusions=**/node_modules/**,**/coverage/**,**/dist/**,**/build/**,**/tests/**,**/*.test.js
-
-      - name: 📈 Send SonarCloud Metrics to Monitoring
-        if: always()
-        continue-on-error: true
-        run: |
-          # Get SonarCloud metrics via API
-          METRICS=$(curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
-            "https://sonarcloud.io/api/measures/component?component=HienHoang1101_cnpm_cicd&metricKeys=bugs,vulnerabilities,code_smells,coverage,duplicated_lines_density,ncloc" \
-            2>/dev/null || echo '{}')
-          
-          # Parse metrics
-          BUGS=$(echo "$METRICS" | jq -r '.component.measures[]? | select(.metric=="bugs") | .value // "0"' 2>/dev/null || echo "0")
-          VULNERABILITIES=$(echo "$METRICS" | jq -r '.component.measures[]? | select(.metric=="vulnerabilities") | .value // "0"' 2>/dev/null || echo "0")
-          CODE_SMELLS=$(echo "$METRICS" | jq -r '.component.measures[]? | select(.metric=="code_smells") | .value // "0"' 2>/dev/null || echo "0")
-          COVERAGE=$(echo "$METRICS" | jq -r '.component.measures[]? | select(.metric=="coverage") | .value // "0"' 2>/dev/null || echo "0")
-          DUPLICATIONS=$(echo "$METRICS" | jq -r '.component.measures[]? | select(.metric=="duplicated_lines_density") | .value // "0"' 2>/dev/null || echo "0")
-          LINES=$(echo "$METRICS" | jq -r '.component.measures[]? | select(.metric=="ncloc") | .value // "0"' 2>/dev/null || echo "0")
-          
-          # Send to Test Metrics Exporter
-          if [ -n "${{ secrets.TEST_METRICS_URL }}" ]; then
-            curl -X POST "${{ secrets.TEST_METRICS_URL }}/api/sonar" \
-              -H "Content-Type: application/json" \
-              -d "{
-                \"bugs\": ${BUGS:-0},
-                \"vulnerabilities\": ${VULNERABILITIES:-0},
-                \"codeSmells\": ${CODE_SMELLS:-0},
-                \"coverage\": ${COVERAGE:-0},
-                \"duplications\": ${DUPLICATIONS:-0},
-                \"linesOfCode\": ${LINES:-0},
-                \"timestamp\": \"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"
-              }" || true
-          fi
-          
-          # Summary
-          echo "## 🔍 SonarCloud Analysis Results" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| 🐛 Bugs | ${BUGS:-N/A} |" >> $GITHUB_STEP_SUMMARY
-          echo "| 🔓 Vulnerabilities | ${VULNERABILITIES:-N/A} |" >> $GITHUB_STEP_SUMMARY
-          echo "| 🔧 Code Smells | ${CODE_SMELLS:-N/A} |" >> $GITHUB_STEP_SUMMARY
-          echo "| 📊 Coverage | ${COVERAGE:-N/A}% |" >> $GITHUB_STEP_SUMMARY
-          echo "| 📋 Duplications | ${DUPLICATIONS:-N/A}% |" >> $GITHUB_STEP_SUMMARY
-          echo "| 📝 Lines of Code | ${LINES:-N/A} |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "🔗 [View Full Report on SonarCloud](https://sonarcloud.io/project/overview?id=HienHoang1101_cnpm_cicd)" >> $GITHUB_STEP_SUMMARY
+  # sonarcloud:
+  #   name: 🔍 SonarCloud Code Analysis
+  #   runs-on: ubuntu-latest
+  #   ... (moved to .github/workflows/sonarcloud.yml)
 
   # ========================================
   # JOB 7: DEPLOY TO STAGING
