config: update sonar-project.properties for local SonarQube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,14 @@
-# SonarCloud Configuration for FastFood Delivery Platform
-# Documentation: https://sonarcloud.io/documentation
+# SonarQube Local Configuration for FastFood Delivery Platform
 
 # ========================================
 # Project Identification
 # ========================================
-sonar.projectKey=HienHoang1101_cnpm_cicd
+sonar.projectKey=fastfood-delivery
 sonar.projectName=FastFood Delivery Platform
 sonar.projectVersion=1.0.0
-sonar.organization=hienhoang1101
+
+# SonarQube Server (Local)
+sonar.host.url=http://localhost:9000
 
 # ========================================
 # Source Configuration
