--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,25 @@ services:
       retries: 5
     restart: unless-stopped
 
+  # SonarQube - Code Quality Analysis
+  sonarqube:
+    image: sonarqube:lts-community
+    container_name: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube_extensions:/opt/sonarqube/extensions
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9000/api/system/status || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: unless-stopped
+
   # ========================================
   # APPLICATION SERVICES
   # ========================================
@@ -298,6 +317,12 @@ volumes:
   prometheus_data:
     driver: local
   grafana_data:
+    driver: local
+  sonarqube_data:
+    driver: local
+  sonarqube_logs:
+    driver: local
+  sonarqube_extensions:
     driver: local
 
 # ========================================
