fix: Add externalSecrets.enabled to values.yaml

--- a/helm/fastfood/values.yaml
+++ b/helm/fastfood/values.yaml
@@ -280,6 +280,10 @@ config:
   jwtExpiresIn: "7d"
   corsOrigin: "*"
 
+# External Secrets Operator (Phase 2)
+externalSecrets:
+  enabled: false
+
 # Secrets (will be overridden by External Secrets Operator)
 secrets:
   jwtSecret: "change-me-in-production"
