--- a/helm/fastfood/values-dev.yaml
+++ b/helm/fastfood/values-dev.yaml
@@ -48,6 +48,31 @@ authService:
 ingress:
   hosts:
     - host: api.fastfood-dev.local
+      paths:
+        - path: /auth
+          pathType: Prefix
+          service: auth-service
+          port: 5001
+        - path: /users
+          pathType: Prefix
+          service: auth-service
+          port: 5001
+        - path: /orders
+          pathType: Prefix
+          service: order-service
+          port: 5002
+        - path: /restaurants
+          pathType: Prefix
+          service: restaurant-service
+          port: 5003
+        - path: /payments
+          pathType: Prefix
+          service: payment-service
+          port: 5005
+        - path: /notifications
+          pathType: Prefix
+          service: notification-service
+          port: 5006
 
 # Smaller MongoDB for dev
 mongodb:
