--- a/helm/fastfood/values-dev.yaml
+++ b/helm/fastfood/values-dev.yaml
@@ -3,39 +3,71 @@ global:
   environment: development
   namespace: fastfood-dev
 
-# Reduce replicas for dev
+# Reduce replicas for dev - ALL services to 1
 authService:
   replicaCount: 1
   autoscaling:
     enabled: false
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "50m"
+    limits:
+      memory: "128Mi"
+      cpu: "200m"
 
 orderService:
   replicaCount: 1
   autoscaling:
     enabled: false
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "50m"
+    limits:
+      memory: "128Mi"
+      cpu: "200m"
 
 restaurantService:
   replicaCount: 1
   autoscaling:
     enabled: false
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "50m"
+    limits:
+      memory: "128Mi"
+      cpu: "200m"
 
 paymentService:
   replicaCount: 1
   autoscaling:
     enabled: false
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "50m"
+    limits:
+      memory: "128Mi"
+      cpu: "200m"
 
 notificationService:
   replicaCount: 1
   autoscaling:
     enabled: false
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "50m"
+    limits:
+      memory: "128Mi"
+      cpu: "200m"
 
 adminService:
   replicaCount: 1
   autoscaling:
     enabled: false
-
-# Reduce resources for dev
-authService:
   resources:
     requests:
       memory: "64Mi"
@@ -81,10 +113,10 @@ mongodb:
   resources:
     requests:
       memory: "128Mi"
-      cpu: "100m"
+      cpu: "50m"
     limits:
       memory: "256Mi"
-      cpu: "250m"
+      cpu: "200m"
 
 # Smaller Redis for dev
 redis:
