--- a/k8s/monitoring/kustomization.yaml
+++ b/k8s/monitoring/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
   - namespace.yaml
   - prometheus-config.yaml
   - prometheus.yaml
+  - loki.yaml
+  - promtail.yaml
   - grafana.yaml
   - grafana-dashboards.yaml
   - test-metrics-exporter.yaml
