--- a/monitoring/alertmanager/secrets.env.example
+++ b/monitoring/alertmanager/secrets.env.example
@@ -1,13 +1,30 @@
 # Alertmanager Secrets Configuration
 # ====================================
-# Copy this file to alertmanager.secrets.yml and fill in your actual values
+# Copy this file to secrets.env and fill in your actual values
 # DO NOT commit the actual secrets file to git!
 
-# Slack Webhook URL
+# ============================================
+# TELEGRAM CONFIGURATION (Primary)
+# ============================================
+# 1. Create bot: Message @BotFather on Telegram → /newbot
+# 2. Copy the bot token provided
+# 3. Add bot to your group/channel
+# 4. Get chat_id: 
+#    - Send a message to the group
+#    - Call: https://api.telegram.org/bot<YOUR_TOKEN>/getUpdates
+#    - Find "chat":{"id": -123456789} in response
+TELEGRAM_BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz
+TELEGRAM_CHAT_ID=-123456789
+
+# ============================================
+# SLACK CONFIGURATION (Backup)
+# ============================================
 # Get from: https://api.slack.com/apps → Incoming Webhooks
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
 
-# Gmail SMTP Credentials
+# ============================================
+# EMAIL CONFIGURATION (Optional)
+# ============================================
 # 1. Enable 2FA on your Gmail account
 # 2. Generate App Password at https://myaccount.google.com/apppasswords
 SMTP_FROM_EMAIL=your-email@gmail.com
